force-app/main/default/objects/Quote/fields/Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Contact_FirstName__c</fullName>
    <description>Created by BDD</description>
    <formula>Contact.FirstName</formula>
    <label>Contact FirstName</label>
    <type>Text</type>
</CustomField>