force-app/main/default/objects/Quote/fields/Contact_LastName__c.field-meta.xml
<CustomField>
    <fullName>Contact_LastName__c</fullName>
    <description>Created by BDD</description>
    <formula>Contact.LastName</formula>
    <label>Contact LastName</label>
    <type>Text</type>
</CustomField>