force-app/main/default/objects/Quote/fields/Date_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_Issued__c</fullName>
    <description>Created by BDD</description>
    <label>Date Issued</label>
    <type>Date</type>
</CustomField>