force-app/main/default/objects/Quote/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <description>Created by BDD</description>
    <label>Approx. Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>