force-app/main/default/objects/Quote/fields/Freight__c.field-meta.xml
<CustomField>
    <fullName>Freight__c</fullName>
    <description>Created by BDD</description>
    <label>Freight (ex. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>