force-app/main/default/objects/Quote/fields/Freight_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Freight_inc_GST__c</fullName>
    <description>Created by BDD</description>
    <formula>Freight__c * 1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Freight (inc. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>