force-app/main/default/objects/Quote/fields/Freight_Notes__c.field-meta.xml
<CustomField>
    <fullName>Freight_Notes__c</fullName>
    <description>Created by BDD</description>
    <label>Freight Notes</label>
    <type>TextArea</type>
</CustomField>