force-app/main/default/objects/Quote/fields/Order_Confirmation_Received__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Received__c</fullName>
    <description>Created by BDD</description>
    <inlineHelpText>Populated by DocuSign on receiving electronic signature</inlineHelpText>
    <label>Order Confirmation Received</label>
    <type>Date</type>
</CustomField>