force-app/main/default/objects/Quote/fields/Order_Confirmation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Order_Confirmation_Sent__c</fullName>
    <description>Created by BDD</description>
    <label>Order Confirmation Sent</label>
    <type>Date</type>
</CustomField>