force-app/main/default/objects/Quote/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Created by BDD</description>
    <inlineHelpText>This is the Customer Purchase Order Number</inlineHelpText>
    <label>Order Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>