force-app/main/default/objects/Quote/fields/PO_Box__c.field-meta.xml
<CustomField>
    <fullName>PO_Box__c</fullName>
    <defaultValue>&quot;Po Box 111 Melrose Park SA 5039&quot;</defaultValue>
    <label>PO Box</label>
    <type>TextArea</type>
</CustomField>