force-app/main/default/objects/Quote/fields/Quote_Is_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>Quote_Is_Valid_Till__c</fullName>
    <formula>today() + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Is Valid Till</label>
    <type>Date</type>
</CustomField>