force-app/main/default/objects/Quote/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <description>Created by BDD-for use in DocuSign custom tag</description>
    <formula>&apos;\\s1\\&apos;</formula>
    <label>Signature</label>
    <type>Text</type>
</CustomField>