force-app/main/default/objects/Quote/fields/Subtotal_inc_Freight__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_inc_Freight__c</fullName>
    <description>Created by BDD</description>
    <formula>TotalPrice +  Freight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal inc. Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>