force-app/main/default/objects/Quote/fields/Total_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_inc_GST__c</fullName>
    <description>Created by BDD</description>
    <formula>Subtotal_inc_Freight__c *1.1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (inc. GST)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>