force-app/main/default/objects/Quote/fields/Total_Price_inc_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_inc_GST__c</fullName>
    <description>Created by BDD</description>
    <label>Total Price (inc. GST)</label>
    <summarizedField>QuoteLineItem.Total_Price_inc_GST__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>