force-app/main/default/objects/Quote/validationRules/Contact_Email_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Email_is_required</fullName>
    <active>true</active>
    <description>Created by BDD</description>
    <errorConditionFormula>ISBLANK( Contact.Email )</errorConditionFormula>
    <errorDisplayField>ContactId</errorDisplayField>
    <errorMessage>Contact Email is required</errorMessage>
</ValidationRule>