force-app/main/default/objects/Quote/validationRules/Payment_Terms_and_Delivery_Date_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Payment_Terms_and_Delivery_Date_required</fullName>
    <active>true</active>
    <description>Created by BDD</description>
    <errorConditionFormula>ISPICKVAL( Status , &apos;Accepted&apos;) &amp;&amp; (ISBLANK( Payment_Terms__c ) || ISBLANK( Delivery_Date__c ) ||  ISBLANK( Order_Number__c ) )</errorConditionFormula>
    <errorMessage>Payment Terms, Delivery Date and Order Number are required</errorMessage>
</ValidationRule>